--- a/src/components/AboutUs/about.css
+++ b/src/components/AboutUs/about.css
@@ -3,7 +3,8 @@
 .clinic-info {
     display: flex;
     margin: 20px auto;
-    max-width: 1200px;
+    max-width: 80%;
+    gap: 40px;
     justify-content: center;
     border-top: 1px solid;
     border-bottom: 1px solid;
@@ -16,10 +17,12 @@
     margin: auto 5px;
     color: gray;
     animation: fadeIn 1s ease-out;
+    /* padding: 10px; */
 }
 
 .title-slogan {
     text-align: center;
+    margin-top: 20px;
     margin-bottom: 20px;
     color: black;
     font-size: 20px;
