--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -1,7 +1,7 @@
 .services-wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: 80%;
     margin: 20px auto;
     opacity: 0;
     animation: fadeIn 1s ease-out forwards;
