--- a/src/components/Slider/slides.css
+++ b/src/components/Slider/slides.css
@@ -3,8 +3,8 @@
 }
 
 .slides-img {
-    height: 100%;
-    width: 50%;
+    width: 80%;
+    height: 70vh;
     margin: auto;
     opacity: 0;
     animation: fadeIn 1.5s ease-out forwards;
@@ -13,6 +13,7 @@
 @media (max-width: 768px) {
     .slides-img {
         width: 100%;
+        height: 60%;
     }
 }
 
