--- a/src/components/Accordion/accordion.css
+++ b/src/components/Accordion/accordion.css
@@ -61,9 +61,10 @@
     right: 20px;
     display: block;
     width: 30px;
-    height: 17px;
+    height: 30px;
     fill: white;
     transform: translateY(-50%);
+    color: white;
 }
 
 .accordion-arrow.active {
