--- a/src/components/Accordion/accordion.css
+++ b/src/components/Accordion/accordion.css
@@ -14,7 +14,7 @@
 .accordion-item {
     margin-bottom: 16px;
     border-radius: 5px;
-    max-width: 1000px;
+    max-width: 83%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -31,6 +31,7 @@
     animation: none;
     font-family: 'Oswald', 'sans-serif';
     font-weight: 500;
+    color: black;
 }
 
 .accordion-body {
@@ -73,6 +74,16 @@
 
 
 @media only screen and (max-width: 767px) {
+
+    .accordion-item{
+        max-width: 90%;
+    }
+
+    .accordion-title{
+        font-size: 30px;
+        padding: 10px;
+    }
+
     .accordion-header {
         font-size: 18px;
     }
