--- a/src/components/Reviews/reviews.css
+++ b/src/components/Reviews/reviews.css
@@ -5,7 +5,7 @@
 }
 
 .review {
-    width: 70%;
+    width: 80%;
     max-height: 200px;
     margin: 30px auto;
     display: flex;
@@ -22,7 +22,7 @@
     height: 9rem;
     border-radius: 50%;
     object-fit: cover;
-    margin: 15px;
+    margin: 20px;
 }
 
 .reviewer-name {
@@ -32,7 +32,7 @@
 }
 
 .reviewer-text-container {
-    padding: 50px 10px;
+    padding: 50px 110px;
 }
 
 .review-text {
@@ -53,9 +53,13 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+
+    .review-title {
+        font-size: 30px;
+    }
     .review {
-        width: 90%;
+        width: 80%;
         max-height: unset;
         flex-direction: column;
         align-items: center;
